--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,15 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
+
+# footer ??
+footer:
+  powered: false 
+  copyright: AAA南瓜种植户
+
+
 # Site
-title: Test
+title: A Blog From Nowhere
 subtitle: ''
 description: ''
 keywords:
@@ -40,7 +47,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -62,7 +69,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 5
   order_by: -date
 
 # Category & Tag
@@ -113,4 +120,26 @@ deploy:
 mathjax:
   enable: true
   per_page: true
+
+tag_generator:
+  enable_index_page: false
+
+tagcloud:
+  min: 12 # Minimum font size in px
+  max: 30 # Maximum font size in px
+  amount: 200 # Total amount of tags
+  orderby: name # Order of tags
+  order: 1 # Sort order
+
+menu:
+  home: / || fa fa-home
+  archives: /archives/ || fa fa-archive
+  tags: /tags/ || fa fa-tags
+  categories: /categories/ || fa fa-tags
+
+sidebar:
+  avatar:
+    url: avt.png
+  social:
+    GitHub: https://github.com/iasnobmatsu || fab fa-github
   
