--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -16,8 +16,9 @@ direction: ltr
 nav:
   home: /
   about: /about/
-  articles: /archives/
-  projects: http://github.com/probberechts
+  posts: /archives/
+  categories: /categories/
+  tags: /tags/
 
 
 # Links to your social media accounts.
@@ -25,11 +26,8 @@ nav:
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
 social_links:
-  github: http://github.com/probberechts/cactus-dark
-  twitter: /
-  facebook: /
-  linkedin: /
-  mail: mailto:name@email.com
+  github: http://github.com/iasnobmatsu
+
 
 # Customize the overview with displaying a tagcloud on the index page.
 # Options: https://hexo.io/docs/helpers.html#tagcloud
@@ -62,7 +60,7 @@ post:
 # Customize the copyright years
 # Note: if start_year/end_year not provided, will use current year.
 copyright:
-  start_year: 2016
+  start_year: 2022
   end_year:
 
 # Customize the 404 page
@@ -88,8 +86,8 @@ error_404:
 #   - grayout: whether to enable a hover effect on the logo
 logo:
   enabled: true
-  width: 50
-  height: 50
+  width: 60
+  height: 60
   url: /images/logo.png
   gravatar: false
   grayout: true
@@ -124,7 +122,7 @@ favicon:
 colorscheme: dark
 
 # Maximal width of the page in rem units.
-page_width: 48
+page_width: 60
 
 
 ##############################################################################
