--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -103,13 +103,13 @@ logo:
 #   - gravatar: whether to create a favicon from your Gravatar
 favicon:
   desktop:
-    url: /images/favicon.ico
+    url: /images/logo-transp.png
     gravatar: false
   android:
-    url: /images/favicon-192x192.png
+    url: /images/logo-transp.png
     gravatar: false
   apple:
-    url: /images/apple-touch-icon.png
+    url: /images/logo-transppng
     gravatar: false
 
 # The color scheme that should be used to highlight codeblocks.
@@ -122,7 +122,7 @@ favicon:
 colorscheme: dark
 
 # Maximal width of the page in rem units.
-page_width: 60
+page_width: 50
 
 
 ##############################################################################
