--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -19,14 +19,15 @@ nav:
   Posts: /archives/
   Categories: /categories/
   Tags: /tags/
+  Search: /search/
+
 
 
 # Links to your social media accounts.
 # The keys should correspond to Fontawesome icon names
 # (see https://fontawesome.com/icons?d=gallery&s=brands);
 # only 'mail' is an exception.
-social_links:
-  github: http://github.com/iasnobmatsu
+social_links: false
 
 
 # Customize the overview with displaying a tagcloud on the index page.
@@ -40,7 +41,7 @@ tags_overview: false
 #   - sort_updated: sort posts by last modification date instead of creation date.
 posts_overview:
   show_all_posts: false
-  post_count: 5
+  post_count: 10
   sort_updated: false
 
 # Customize the archive view.
@@ -197,3 +198,4 @@ cdn:
   font_awesome: https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css
   justified_gallery_css: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/css/justifiedGallery.min.css
   justified_gallery_js: https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js
+
