--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-hide-posts": "^0.2.0",
     "hexo-image-link": "^0.0.3",
     "hexo-math": "^4.0.0",
+    "hexo-pagination": "^3.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-stylus": "^2.1.0",
