--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -89,7 +89,7 @@ logo:
   enabled: true
   width: 60
   height: 60
-  url: /images/logo.png
+  url: /images/logo-transp.png
   gravatar: false
   grayout: true
 
