--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -519,7 +519,7 @@ tag_ui: # 留空或 index
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
-background:
+background: url(https://iasnobmatsu.github.io/2022/11/09/009-art/d7.JPG)
 
 # Footer Background
 footer_bg: false
