--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-filter-mathjax": "^0.9.0",
     "hexo-fun-time": "^0.0.4",
     "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-calendar": "^0.1.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-search": "^2.4.3",
