--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -606,13 +606,13 @@ font:
   global-font-size:
   code-font-size:
   font-family: NotoS
-  code-font-family: NotoS
+  code-font-family: 
 
 # Font settings for the site title and site subtitle
 # 左上角網站名字 主頁居中網站名字
 blog_title_font:
   font_link:
-  font-family:
+  font-family: NotoS
 
 # The setting of divider icon (水平分隔線圖標設置)
 hr_icon:
