--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -673,10 +673,10 @@ aside:
       link: https://github.com/xxxxxx
   card_announcement:
     enable: true
-    content: 雨 一直下个不停 灌满这空空的努力 也没有人在意
+    content: 現在你就什麽都先不做 看看這世界能把你怎麼 就盡情地在月光下放空 反正你原來也一無所有
   card_recent_post:
     enable: true
-    limit: 5 # if set 0 will show all
+    limit: 3 # if set 0 will show all
     sort: updated # date or updated
     sort_order: # Don't modify the setting unless you know how it works
   card_categories:
@@ -685,7 +685,7 @@ aside:
     expand: none # none/true/false
     sort_order: # Don't modify the setting unless you know how it works
   card_tags:
-    enable: true
+    enable: false
     limit: 40 # if set 0 will show all
     color: false
     sort_order: # Don't modify the setting unless you know how it works
