--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -673,7 +673,7 @@ aside:
       link: https://github.com/xxxxxx
   card_announcement:
     enable: true
-    content: 現在你就什麽都先不做 看看這世界能把你怎麼 就盡情地在月光下放空 反正你原來也一無所有
+    content: 避开大家无聊之中勉勉强强的热闹 开发自己能够得到孤独中的欢笑 不想再去唠唠叨叨...没完没了
   card_recent_post:
     enable: true
     limit: 3 # if set 0 will show all
