--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://iasnobmatsu.github.io
+url: http://iasnobmatsu.github.io/funeland
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -107,7 +107,7 @@ plugins: hexo-math
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/iasnobmatsu/iasnobmatsu.github.io.git
+  repo: https://github.com/iasnobmatsu/funeland.git
   branch: main
   message: "{{ now('YYYY-MM-DD HH:mm:ss') }}"
 
