--- a/_config.yml
+++ b/_config.yml
@@ -44,16 +44,20 @@ render_drafts: false
 post_asset_folder: true
 relative_link: false
 future: true
+highlight_copy: true
 highlight:
-  hljs: true
   enable: true
+  auto_detect: false
   line_number: false
-  auto_detect: true
+  line_threshold: 0
   tab_replace: ''
+  wrap: true
+  hljs: false
 prismjs:
   enable: false
   preprocess: true
-  line_number: true
+  line_number: false
+  line_threshold: 0
   tab_replace: ''
 
 # Home page setting
