--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "hexo-tag-chart": "^1.0.8",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-next": "^8.13.2",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "tag": "^0.4.17"
   },
   "devDependencies": {
     "hexo-breadcrumb": "^1.0.2"
