--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -3,19 +3,20 @@
 # --------------------------------------
 
 menu:
-  Home: / || fas fa-home
+  Projects: /categories/projects || fas fa-folder-open
+  Posts: / || fas fa-clock
+  About: /about/ || fas fa-user
   Archives: /archives/ || fas fa-archive
   Tags: /tags/ || fas fa-tags
-  Categories: /categories/ || fas fa-folder-open
+  # Categories: /categories/ || fas fa-folder-open
   # List||fas fa-list:
   #   Music: /music/ || fas fa-music
   #   Movie: /movies/ || fas fa-video
   # Links: /link/ || fas fa-link
-  # About: /about/ || fas fa-heart
+
 
 # Code Blocks (代碼相關)
 # --------------------------------------
-
 highlight_theme: light #  darker / pale night / light / ocean / mac / mac light / false
 highlight_copy: true # copy button
 highlight_lang: true # show the code language
@@ -88,10 +89,10 @@ avatar:
 disable_top_img: true
 
 # The banner image of home page
-index_img: /img/d17.jpg
+index_img: # /img/d17.jpg
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: /img/d17.jpg
+default_top_img: # /img/d17.jpg
 
 # The banner image of archive page
 archive_img:
@@ -116,20 +117,20 @@ category_per_img:
 
 cover:
   # display the cover or not (是否顯示文章封面)
-  index_enable: false
+  index_enable: true
   aside_enable: false
-  archives_enable: false
+  archives_enable: true
   # the position of cover in home page (封面顯示的位置)
   # left/right/both
   position: both
   # When cover is not set, the default cover is displayed (當沒有設置cover時，默認的封面顯示)
   default_cover:
-    - /img/d17.jpg
+    # - /img/d17.jpg
 
 # Replace Broken Images (替換無法顯示的圖片)
 error_img:
   flink: /img/friend_404.gif
-  post_page: /img/d17.jpg
+  post_page: # /img/d17.jpg
 
 # A simple 404 page
 error_404:
