--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ future: true
 highlight_copy: true
 highlight:
   enable: true
-  auto_detect: false
+  auto_detect: true
   line_number: false
   line_threshold: 0
   tab_replace: ''
